add Html Helper

--- a/Clase4/Views/Movie/Detail.cshtml
+++ b/Clase4/Views/Movie/Detail.cshtml
@@ -6,18 +6,12 @@
 
 <form method="post">
 
-<button type="submit" 
-        class="btn btn-primary"
-        asp-controller="Movie"
-        asp-action="Edit"
-        asp-route-id="@Model.Code"> Editar
-</button>
+        <button type="submit" class="btn btn-primary" asp-controller="Movie" asp-action="Edit"
+                asp-route-id="@Model.Code"> Editar
+        </button>
 
-<button type="submit" 
-        class="btn btn-danger"
-        asp-controller="Movie"
-        asp-action="Delete"
-        asp-route-code="@Model.Code"> Eliminar
-</button>
+        <button type="submit" class="btn btn-danger" asp-controller="Movie" asp-action="Delete"
+                asp-route-code="@Model.Code"> Eliminar
+        </button>
 
 </form>
